fix: long review name wrapping in admin pages

--- a/site/src/App.scss
+++ b/site/src/App.scss
@@ -91,6 +91,7 @@ button {
   gap: 7px;
   height: 29px;
   font-size: 13px;
+  white-space: nowrap;
 
   padding: 0px 14px;
 
